--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,13 @@
+*{
+    margin: 1px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body {
-    background: linear-gradient(25deg, #190019, #2b124c, #522b5b, #854d6c, #dfb6b2, #fbe4d8);
-text-align: center;
-margin: 0%;
+    background-image: linear-gradient( 220deg, #05161a, #072e33, #0c7075, #0f9690, #6da5c0, #294d61);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 0px;
 }
