--- a/style.css
+++ b/style.css
@@ -5,9 +5,57 @@
 }
 
 body {
-    background-image: linear-gradient( 220deg, #05161a, #072e33, #0c7075, #0f9690, #6da5c0, #294d61);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 0px;
+        background-image: linear-gradient( 
+        220deg, #05161a, #072e33, #0c7075, #0f9690, #6da5c0, #294d61);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        height: 0px;
 }
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas: "nav nav nav"
+                         "sidebar main main"
+                         "sidebar conteudo1 conteudo2"
+                         "sidebar footer footer"; 
+}
+
+#nav{
+    background-color: peru;
+    grid-area: nav;
+}
+
+#main{
+    background-color: red;
+    grid-area: main;
+}
+
+#sidebar{
+    background-color: yellow;
+    grid-area: sidebar;
+}
+
+#conteudo1{
+    background-color: pink;
+    grid-area: conteudo1;
+}
+
+#conteudo2{background-color: green;
+    grid-area: conteudo2;
+}
+
+#footer{background-color: yellowgreen;
+    grid-area: footer;
+}
+
+
+
+
+
+
+
+
+
