--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ p{
  
 
 }
+a{
+    text-decoration: none;
+}
+a:visited{
+    color: white;
+}
 
 body {
        
@@ -35,31 +41,79 @@ body {
                          "sidebar footer footer";
     grid-gap: 0.5em;
 }
-.navegacao:not(li.navegacao-bar) {
+/*
+#nav{
     background-color: rgba(0,45,255, 0.5);
     width: 100%;
     height: 100%;
-    filter: blur(4px);
+    backdrop-filter: blur(4px);
+
 }
-.navegacao-bar {
+*/
+.div-fundo{
+top: -2px;
+    left: -1px;
+    position: absolute;
+    background-color: #666666;
+    width: 100%;
+    height: 100px;
+    opacity: 0.7;
+    filter: blur(4px);
+    border: 1px solid;
+    
+}
+.navegacao{
+    text-align: center;
+    padding-top: 10px;
+    left: 0px;
+    position: absolute;
+}
+
+.navegacao-bar{
+    color: aliceblue;
+    font-family: 'Readex Pro', sans-serif;
+    font-size: 2em;
+    filter:none;
     display: flex;
     float: left;
 }
+.navegacao-bar li{ 
+    font-weight: 400;
+    text-align: right;
+    background-color: #0f9690;
+    padding: 50px;
+}
+.container-logo{
+    display: flex;
+    width: 300px;
+    padding: 0px 20px 0px 20px;
+
+}
 .container-logo div{
-    background-color: red;
+         display:flex;
+}
+.container-logo .decimal a{
+    padding-top: 50%;
+    padding-left: 50px;
+}
+.container-logo .decimal{
+    position: inherit;
+    margin-top: 50%;
+    font-weight:700;
+    float: right;
 }
 .logo{
+    object-fit: contain;
     width: 50px;
     height: 50px;
-    background-color: #05161a;
+    background-image: url("site/images/1656733637logo-canva-png.png");
+   
 }
 
 #nav{
-    padding: 50px;
+    position: inherit;
     float: left;
-    background-color: peru;
     grid-area: nav;
-    border-radius: 325px;
 }
 
 #main{
