--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+@keyframes pulsating{
+    /*
+    50%{
+        box-shadow: -120px 60px 230px 180px rgba(82, 16, 196, 0.4),
+    -60px 50px 200px 77px rgba(5, 236, 136, 0.6);
+    }
+    */
+    100%{
+        box-shadow: -120px 60px 230px 180px rgba(82, 16, 196, 0.5),
+    -60px 50px 200px 77px rgba(5, 236, 136, .9);
+        
+    }
+
+}
+
 *{  
     font-family: 'Readex Pro', sans-serif;
     margin: 1px;
@@ -17,9 +32,12 @@ a:visited{
 }
 
 body {
-       
+       /*
         background-image: linear-gradient( 
         220deg, #05161a, #072e33, #0c7075, #0f9690, #6da5c0, #294d61);
+        */
+        background-color: rgb(81, 81, 82);
+        background-image: radial-gradient(ellipse at bottom,rgb(33,37,42),rgb(33,37,42),transparent);
         background-position: center;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -28,8 +46,17 @@ body {
         padding-left: 10%;
         padding-right: 7.5%;
 }
-
+ .container > *:not(.nav){
+    background-color: rgb(46, 46, 46);
+    border-radius: 60px;
+    margin: 15px;
+    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.1),
+    7px 7px 20px 30px rgba(0,0,0,.1),
+    4px 4px 5px 0px rgba(0,0,0,.1);
+    outline: none;
+}
 .container{
+    
     display: grid;
     height: 100vh;
     grid-template-columns: 1fr 1fr 1fr;
@@ -49,16 +76,20 @@ body {
 
 }
 */
+
+.stroke{
+    left: -20px;
+    height: 120px;
+    width: 120%;
+    position:fixed;
+    overflow: hidden;
+}
 .div-fundo{
-top: -2px;
-    left: -1px;
-    position: absolute;
-    background-color: #666666;
+    background-color: gray;
     width: 100%;
-    height: 100px;
-    opacity: 0.7;
-    filter: blur(4px);
-    border: 1px solid;
+    height: 200px;
+    opacity: 0.3;
+    filter: blur(40px);
     
 }
 .navegacao{
@@ -67,20 +98,40 @@ top: -2px;
     left: 0px;
     position: absolute;
 }
+.navegacao > *{
+    text-shadow: 2px 2px 5px #00000014,
+    0px 0px 30px #35353599;
 
+}
+.navegacao a:hover { 
+    text-shadow: 2px 2px 20px #eae7e7e5,
+    0px 0px 45px rgb(255, 255, 255);
+    
+
+}
+
+
+.menu{
+    padding-top: 15px;
+}
+.option{
+    padding-top: 15px;
+}
 .navegacao-bar{
     color: aliceblue;
     font-family: 'Readex Pro', sans-serif;
+    font-weight: 400;
     font-size: 2em;
     filter:none;
     display: flex;
     float: left;
 }
 .navegacao-bar ul{
-    padding-left: 20px; 
+    padding-left: 80px; 
     
 }
 .container-logo{
+    font-size: 1.4em;
     font-weight: 700;
     display: flex;
 
@@ -91,17 +142,60 @@ top: -2px;
 
 .container-logo .decimal{
     position: inherit;
-    margin-top: 50%;
     font-weight:700;
     float: right;
 }
 .logo{
     object-fit: contain;
-    width: 50px;
-    height: 50px;
+    margin-right:30px;
+    width: 70px;
+    height: 70px;
     background-image: url("site/images/1656733637logo-canva-png.png");
    
 }
+.lang{
+    padding-top: 20px;
+    padding-left: 250px; 
+    float: right;
+}
+.button-get-app{
+    animation: pulsating .4s ease-in 0.3s infinite alternate;
+    animation-play-state: paused;
+    box-shadow: -120px 60px 230px 180px rgba(82, 16, 196, 0.25),
+    -60px 50px 200px 77px rgba(5, 236, 136, 0.4);
+    font-weight: 600;
+    right: 3%;
+    top:1%;
+    display: flex;
+    position: fixed;
+    border-radius: 10px;
+    float:right;
+    position: 300px;
+    padding:20px 35px 20px 35px;
+    background-image: radial-gradient(ellipse at top left,#38e79e,rgb(68, 195, 215),#4260e7,#7409c6,transparent);
+}
+.button-get-app:hover{
+        animation-play-state: running;
+      
+
+}
+
+
+/*
+.button-get-app:hover{
+    animation-play-state: initial;
+    animation-name: pulsating;
+    animation-duration: .5s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0.2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-fill-mode: both;/*
+    animation: pulsating .5s ease-in 0.2s infinite alternate; 
+    
+
+}
+*/
 
 #nav{
     position: inherit;
@@ -110,37 +204,31 @@ top: -2px;
 }
 
 #main{
-    background-color: red;
     grid-area: main;
-    border-radius: 25px;
-    box-shadow: 3px 3px 2em #888;
+   
 }
 
 #sidebar{
-    background-color: blue;
+
     grid-area: sidebar;
-    border-radius:25px;
-    box-shadow: 3px 3px 2em #888;
-}
+
 
 #conteudo1{
-    background-color: pink;
+
     grid-area: conteudo1;
-    border-radius:25px;
-    box-shadow: 3px 3px 2em #888;
+
 }
 
-#conteudo2{background-color: green;
+#conteudo2{
     grid-area: conteudo2;
-    border-radius:25px;
-    box-shadow: 3px 3px 2em #888;
+
 }
 
-#footer{background-color: yellowgreen;
+#footer{
     grid-area: footer;
-    border-radius:25px;
-    box-shadow: 3px 3px 2em #888;
+  
 } 
+
 
 
 
